# quickcall-integrations

./: .gitignore  .quickcall-issue-template.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  task.yml
commands/: daily-updates.md
mcp_server/: __init__.py  config.py  server.py
mcp_server/api_clients/: __init__.py  github_client.py  slack_client.py
mcp_server/auth/: __init__.py  credentials.py  device_flow.py
mcp_server/resources/: __init__.py  github_resources.py  slack_resources.py
mcp_server/tools/: __init__.py  auth_tools.py  git_tools.py  github_tools.py  slack_tools.py  utility_tools.py
plugins/quickcall/: .mcp.json
plugins/quickcall/.claude-plugin/: plugin.json
plugins/quickcall/commands/: appraisal.md  connect-github-pat.md  connect.md  pr-summary.md  projects.md  slack-summary.md  status.md  updates.md
tests/: README.md  test_appraisal_integration.py  test_appraisal_tools.py  test_auth_flow.py  test_comment_management.py  test_integrations.py  test_pr_integration.py  test_project_integration.py  test_project_tools.py  test_tools.py
tests/appraisal/: __init__.py  setup_test_data.py
