[project]
name = "quickcall-integrations"
version = "0.1.3"
description = "MCP server with developer integrations for Claude Code and Cursor"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.13.0",
    "pydantic>=2.11.7",
]

[project.scripts]
quickcall-integrations = "mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]
