[project]
name = "quickcall-integrations"
version = "0.3.6"
description = "MCP server with developer integrations for Claude Code and Cursor"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.13.0",
    "pydantic>=2.11.7",
    "PyGithub>=2.8.1",
    "PyYAML>=6.0",
    "httpx>=0.28.0",
    "rapidfuzz>=3.0.0",
]

[project.scripts]
quickcall-integrations = "mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "mcp>=1.9.0",
    "rich>=13.0.0",
    "ruff>=0.14.11",
    "twine>=6.2.0",
]
